#
# ngIRCd -- The Next Generation IRC Daemon
# Copyright (c)2001-2008 Alexander Barton <alex@barton.de>
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2 of the License, or
# (at your option) any later version.
# Please read the file COPYING, README and AUTHORS for more information.
#

EXTRA_DIST = index.xml \
 01ngircd-contents.xml 01ngircd.xml 02de-contents.xml 02de.xml

maintainer-clean-local:
	rm -f Makefile Makefile.in

# -eof-
